fixed Friendlist not scrolling and added good looking scrollbar

--- a/react_app/src/components/Friendlist.scss
+++ b/react_app/src/components/Friendlist.scss
@@ -2,6 +2,8 @@
 
 .friendslist{
 
+    height: 100%;
+
     ul{
 
         height: 100%;
